--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "with-argparse"
 description = "A simple but handy Python library to generate a `argparse.ArgumentParser` object from a type-annotated method "
-version = "1.0.0rc6"
+version = "1.0.1"
 license = {text = "Apache 2.0"}
 readme = "README.md"
 
